[gd_scene load_steps=14 format=3 uid="uid://voq23nrnnffw"]

[ext_resource type="Texture2D" uid="uid://dqhoep2b4sva6" path="res://TestAssets/NinjaAdventure/Actor/Characters/BlueSamurai/SpriteSheet.png" id="1_cgfcq"]
[ext_resource type="Script" path="res://Characters/player.gd" id="1_t7f4v"]

[sub_resource type="Animation" id="Animation_4j6ma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_ff5gj"]
resource_name = "WalkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_g5gs7"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_8sgaw"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_n55q1"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hksu"]
_data = {
"RESET": SubResource("Animation_4j6ma"),
"WalkDown": SubResource("Animation_ff5gj"),
"WalkLeft": SubResource("Animation_g5gs7"),
"WalkRight": SubResource("Animation_8sgaw"),
"WalkUp": SubResource("Animation_n55q1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utx7v"]
size = Vector2(14, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qd51f"]
size = Vector2(14, 17)

[sub_resource type="Animation" id="Animation_isn3o"]
resource_name = "HurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.164706, 0.160784, 0.498039), Color(1, 1, 1, 0.498039)]
}

[sub_resource type="Animation" id="Animation_ce8nh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.164706, 0.160784, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1esaa"]
_data = {
"HurtBlink": SubResource("Animation_isn3o"),
"RESET": SubResource("Animation_ce8nh")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_t7f4v")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, -8)
texture = ExtResource("1_cgfcq")
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -20.0
offset_top = -16.0
offset_right = 20.0
offset_bottom = 24.0
color = Color(1, 0.164706, 0.160784, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2hksu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_utx7v")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_qd51f")

[node name="Effect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1esaa")
}

[node name="hurtTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
